<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spirit SE</string>
    <string name="action_settings">Settings</string>
    <string name="loading">loading&#8230;</string>
    <string name="title_activity_home">Home</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_conditions_of_use">Conditions Of Use</string>
    <string name="conditions_of_use">First, thanks for trying this software. If you want to make it better or just say thanks, send your ideas or bug reports to michix5d@gmail.com. If you just want to swear about me or this app, please send it somewhere else.\n\nThis Application is licensed under Creative Commons Attribution-ShareAlike 3.0 unported (CC BY-SA 3.0). That means you can copy this app to your friends without getting in licensing trouble - please share it!\n\nThis App does not send any personal information. But when downloading contents via this app, information about your device will be sent:\n- display resolution and density\n- version of this app\n- an unique id (randomly generated)</string>
    <string name="cou_decline">I can\'t read, don\'t want to read, can\'t understand or can\'t accept the conditions of use.</string>
    <string name="cou_dont_want_to_read">I have not understood, can\'t or don\'t want to read the conditions of use but accept them.</string>
    <string name="cou_accept">I\'ve read, understood the conditions of use and want to accept them.</string>
    <string name="cou_come_on">Thanks for buying my old washing machine!\n\nJust a joke. Come on, the text isn\'t very long. Do you want to read it now?</string>
    <string name="yes">yes</string>
    <string name="sure">sure</string>
    <string name="settings">Settings</string>
    <string name="none">none</string>
    <string name="about">About</string>
    <string name="title_activity_about">About Spirit</string>
    <string name="spirit_logo">Spirit Logo</string>
    <string name="a_about_text">You are using Spirit Second Edition, written by Michael Wodniok. Thanks for trying and using this app. Contact for ideas and bug reports: michix5d@gmail.com\nThanks to Marcus Denison, who wrote the first version of the spirit webservice. Also thanks to all contributors to the webservices. Special thanks to Christian \"Wingguard\" Meißner, Michael \"Moga\" Dragunski and Tobias Anhalt for testing on various devices.\n\nUsed tools:\n- Eclipse\n- Android SDK + ADT\n- Oracle JRE\n- Inkscape</string>
    <string name="a_view_cou">view conditions of use</string>
    <string name="a_donate">donate a beer</string>
    <string name="p_filter_news">Filter news by course</string>
    <string name="p_schedule">Schedule</string>
    <string name="p_download_schedule">Download schedule</string>
    <string name="p_download_schedule_summary">Warning: deletes already edited schedule</string>
    <string name="p_edit_lectures">Edit lectures</string>
    <string name="p_edit_events">Edit events</string>
    <string name="p_set_group_filters">Set group filters</string>

    <string-array name="l_splashes">
        <item>24053</item>
        <item>presented in DOUBLEVISION\n(when drunk)</item>
        <item>always beta!</item>
        <item>this idea was stolen from Minecraft</item>
        <item>this place is DEAD</item>
        <item>indead.</item>
        <item>fascinating!</item>
        <item>with unbelievably amazing soundtrack!</item>
        <item>your ad here!</item>
        <item>parking position.</item>
        <item>these subtitles are very useless.</item>
        <item>wazzup</item>
        <item>it\'s currently one minute later than a minute before.</item>
        <item>playing frisbee makes a lot of fun!</item>
        <item>sorry for my bad english</item>
        <item>you can say you to me :D</item>
        <item>teh roflcopter</item>
        <item>NOP</item>
        <item>for free!</item>
        <item>if you plan to shoplift, please let us know. thanks.</item>
        <item>if you like this software, buy me a beer.</item>
        <item>beerware</item>
        <item>no refunds</item>
        <item>even made for uneasy riders</item>
        <item>/bb|[^b]{2}/</item>
        <item>over nine thousand!</item>
        <item>m-m-m-m-m-multikill</item>
        <item>Two people fell into the certain death!</item>
        <item>like this app? in "about" you find a donation button.</item>
        <item>my bear has eight edges, it\'s a octobear</item>
    </string-array>
    
    <string name="l_special_birthday_michi">HAPPY BIRTHDAY, Michael!</string>
    <string name="l_special_christmas">hey, it\'s christmas in germany, why are you looking into spirit?!</string>
    <string name="l_special_newyear">happy new year!</string>
    

    <string name="title_activity_settings">Settings</string>
    <string name="s_title_basic">News</string>
    <string name="s_title_schedule">Schedule</string>

    <string-array name="sb_newsintervals">
        <item>At every launch of the app</item>
        <item>Every 6 hours</item>
        <item>Every 24 hours</item>
        <item>Every 2 days</item>
        <item>One time a week</item>
    </string-array>

    <string name="sb_newsinterval_desc">Update interval for news. News will be loaded at startup of the app in set interval.</string>
    <string name="sb_newsfilter_desc">Filter for the displayed news.</string>
    <string name="title_activity_news_view">NewsViewActivity</string>
    <string name="n_notfound">Sorry, the news where not found.</string>
    <string name="n_writtenby">Written by %1$s at %2$s</string>
    <string name="ss_course_desc">Your course for downloading and showing a schedule including countdown.</string>
    <string name="ss_download">download schedule now</string>
    <string name="ss_edit">edit schedule</string>
   	<string name="h_title_schedule">schedule</string>
   	<string name="h_title_news">news</string> 
   	<string name="hs_noeventsinschedule">no events in schedule</string> 
   	<string name="ss_groups">groups</string>
   	<string name="title_activity_group_setup">Group Setup</string>
   	<string name="g_setgroupfor">Set group for "%s"</string>
   	<string name="title_activity_schedule_editor">Advanced Schedule Editor</string>
   	
   	<string name="lecture">lecture</string>
   	<string name="exercise">exercise</string>
   	<string name="title">title</string>
   	<string name="lecturer">lecturer</string>
   	<string name="lecture_editevents">edit events</string>
   	<string name="ase_delete_lecture">delete lecture with all contained events</string>
   	<string name="ase_delete_event">delete this event</string>
   	<string name="week">week</string>
   	<string name="ase_start">start of event</string>
   	<string name="ase_length">length in minutes</string>
   	<string name="room">room</string>
   	<string name="group">group</string>
   	<string name="even">even</string>
   	<string name="odd">odd</string>
   	<string name="all">all</string>
   	<string name="ase_none">&lt;none&gt;</string>
   	<string name="ase_add_new_lecture">&lt;add new lecture&gt;</string>
   	<string name="ase_add_new_event">&lt;add new event&gt;</string>
   	<string name="ase_parse_error_start">Error: could not parse start-time.</string>
   	<string name="ase_long_tap_to_delete">Tap and hold to delete.</string>
   	
   	<string name="settings_bg_color_confirm">okay</string>
   	<string name="settings_bg_color_dialog">pick a background-color</string>
   	<string name="settings_default_color_confirm">default</string>
   	<string name="ss_color">set color of display</string>
   	<string name="hs_holdforhelp">You need help? Simply hold!</string>
   	<string name="hs_helptext">Just swipe up or down to change the day. Double tap to reset. To fill or change the plan go to the settings. Hold again to close the help.</string>

</resources>