<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/ss_course_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ss_course_desc" />

    <Spinner
        android:id="@+id/ss_course_spin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/ss_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ss_download" />

    <Button
        android:id="@+id/ss_groups"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ss_groups" />
    
    <Button
        android:id="@+id/ss_editor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ss_edit" />

    <Button
        android:id="@+id/ss_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ss_color" />

</LinearLayout>