<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConditionsOfUseActivity" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/conditions_of_use" />
	
	    <Button
	        android:id="@+id/cou_decline"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/cou_decline" />
	    
	    <Button
	        android:id="@+id/cou_dont_want_to_read"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/cou_dont_want_to_read" />
	
	    <Button
	        android:id="@+id/cou_accept"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/cou_accept" />

    </LinearLayout>
</ScrollView>