<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >
	    <ListView
	        android:id="@+id/ase_lecturelist"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	    </ListView>
    </LinearLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
        	android:layout_weight="1" >
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	
	        <EditText
	            android:id="@+id/ase_lecture_title"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:ems="10"
	            android:hint="@string/title" >

	        </EditText>
	
	        <EditText
	            android:id="@+id/ase_lecture_lecturer"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:ems="10"
	            android:hint="@string/lecturer" >
	        </EditText>
	        
	        <RadioGroup
	            android:id="@+id/ase_lecture_type"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:weightSum="2" >
			
			    <RadioButton
			        android:id="@+id/ase_lecture_type_lecture"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:text="@string/lecture" />
			
			    <RadioButton
			        android:id="@+id/ase_lecture_type_exercise"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:text="@string/exercise" />

			</RadioGroup>

	        <Spinner
	            android:id="@+id/ase_lecture_eventspinner"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content" />

	        <Button
	            android:id="@+id/ase_lecture_eventbutton"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/lecture_editevents" />
	
	    </LinearLayout>
	</ScrollView>

    

</LinearLayout>